2009-07-30  Hedayat Vatankhah  <hedayat@grad.com>

	* lib/oxygen/physicsserver/space.h (Space): 
	* lib/oxygen/physicsserver/space.cpp (Space::Collide):
	- performance improvement: do not call dSpaceCollide() for spaces with
	  disabled internal collision.
	 
	* lib/oxygen/simulationserver/simulationserver.cpp: 
	- do not output too small skipped times
	- move PrePhysicsUpdate() call just before PhysicsUpdate() call in
	  RunMultiThreaded() function => 1 less wait() call with no speed loss.

2009-07-29  Hedayat Vatankhah  <hedayat@grad.com>

	* lib/oxygen/simulationserver/simulationserver.h: 
	* lib/oxygen/simulationserver/simulationserver.cpp:
	- fixed some issues in multi-threaded code
	 
	* spark/spark.rb: 
	- making multi-threaded mode the default mode for running server

2009-07-27  Hedayat Vatankhah  <hedayat@grad.com>

	* lib/zeitgeist/scriptserver/scriptserver.cpp: 
	- improve ruby 1.9.x compatibility (using RARRAY_LEN() instead of RARRAY()->len)
	
	* lib/salt/fileclasses.cpp (RFile::BundlePath): 
	- use SPARK_DIR environment variable for BundlePath if available

2009-07-26  Hedayat Vatankhah  <hedayat@grad.com>

	* CMakeLists.txt: 
	- set SPARK_DIR environment flag when installed using NSIS installer
	
	* cmake/FindODE.cmake: 
	- try to detect correct ODE preprocessor flag on Windows

2009-07-24  Marian Buchta  <marian.buchta@gmail.com>

	* cmake/FindRuby.cmake
	- Add include and library path for Ruby 1.8 and 1.9 (for Windows)

2009-06-24  Hedayat Vatankhah  <hedayat@grad.com>

	* NEWS: 
	* RELEASE:
	- prepared for 0.1.1 release
	 
	* lib/oxygen/simulationserver/agentcontrol.cpp: 
	- Sending senses to agents after generating all senses, to be (hopefully!) a
	  bit more fare to agents.

2009-06-15  Sander van Dijk  <sgvandijk@gmail.com>

  * lib/oxygen/simulationserver/netcontrol.cpp
  - Make reading client messages a bit more fail-safe by making sure the full message is read
  
2009-04-15  Hedayat Vatankhah  <hedayat@grad.com>

	* plugin/CMakeLists.txt: 